--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 pytest
+          pip install flake8 pytest, pytest-cov
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Install projects_networks
         run: |
@@ -32,8 +32,9 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Test with pytest
         run: |
-          pytest
+          pytest --cov=./ --cov-report=xml
       - name: "Upload coverage to Codecov"
+      run: |
         uses: codecov/codecov-action@v1
         with:
           fail_ci_if_error: true
